# TheHome

./: .gitignore
PoC/: .gitignore  DisplayImage.cpp
PoC/opencv/: DisplayImage
PoC/opencv/stream/door/: CMakeLists.txt  door.cpp
PoC/opencv/stream/server/: CMakeLists.txt  server.cpp
PoC/pre_process/: add_noise.py
templates/: index.html
