cmake_minimum_required(VERSION 2.8)
set (CMAKE_CXX_STANDARD 11)
project( door CXX )
set(raspicam_DIR "/usr/local/lib/cmake")
find_package( OpenCV REQUIRED )
find_package(raspicam REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( door.out door.cpp )
target_link_libraries( door.out ${raspicam_CV_LIBS})
